<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_dialog"
        android:layout_width="@dimen/x550"
        android:layout_height="@dimen/x400"
        android:background="@drawable/pop_login_btn"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tv_dialog_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/x50"
                android:text="@string/pop_login"
                android:textColor="@color/gray55555D"
                android:textSize="@dimen/text_size_32" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/ll123"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/x40"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="@dimen/x426"
                    android:layout_height="@dimen/x40"
                    android:layout_marginLeft="@dimen/x65"
                    android:layout_marginRight="@dimen/x65"
                    android:background="@drawable/pop_login_ed"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/font_key_text_style_pop_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/x23"
                        android:layout_marginRight="@dimen/x23"
                        android:text="@string/pop_login_sjh"
                        android:textSize="@dimen/text_size_22" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/grayDCDCDC" />

                    <EditText
                        android:id="@+id/ed_sjh"
                        style="@style/pop_login_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:hint="@string/pop_login_qsrndsjhm"
                        android:imeOptions="flagNoExtractUi"
                        android:inputType="phone"
                        android:textColorHint="@color/gray999999"
                        android:textSize="@dimen/text_size_22" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="@dimen/x426"
                    android:layout_height="@dimen/x40"
                    android:layout_marginLeft="@dimen/x65"
                    android:layout_marginRight="@dimen/x65"
                    android:layout_marginTop="@dimen/x30"
                    android:background="@drawable/pop_login_ed"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/font_key_text_style_pop_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/x23"
                        android:layout_marginRight="@dimen/x23"
                        android:text="@string/pop_login_yzm"
                        android:textSize="@dimen/text_size_22" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/grayDCDCDC" />

                    <EditText
                        android:id="@+id/ed_qsryzm"
                        style="@style/pop_login_edittext"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@null"
                        android:hint="@string/pop_login_qsrdxyzm"
                        android:imeOptions="flagNoExtractUi"
                        android:inputType="number"
                        android:textColorHint="@color/gray999999"
                        android:textSize="@dimen/text_size_22" />

                    <TextView
                        android:id="@+id/tv_hqyzm"
                        style="@style/font_key_text_style_pop_login"
                        android:layout_width="@dimen/x122"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/x20"
                        android:background="@drawable/smssdk_btn_disenable_hqyzm"
                        android:gravity="center"
                        android:text="@string/pop_login_hqyzm"
                        android:textColor="@color/white"
                        android:textColorHint="@color/gray999999"
                        android:textSize="@dimen/text_size_22" />

                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll123"
                android:layout_marginLeft="@dimen/x32"
                android:layout_marginRight="@dimen/x32"
                android:layout_marginTop="@dimen/x55"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="@dimen/x122"
                    android:layout_height="@dimen/x34"
                    android:layout_marginRight="@dimen/x20"
                    android:background="@drawable/pop_login_cancel_bg"
                    android:text="@string/pop_login_qx"
                    android:textColor="@color/black333333"
                    android:textSize="@dimen/text_size_24" />

                <!--<View
                    android:layout_width="1dp"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/gray_line" />-->

                <Button
                    android:id="@+id/btn_ok"
                    android:layout_width="@dimen/x122"
                    android:layout_height="@dimen/x34"
                    android:layout_marginLeft="@dimen/x20"
                    android:background="@drawable/smssdk_btn_disenable"
                    android:text="@string/pop_login_qd"
                    android:textColor="@color/whiteffffffff"
                    android:textSize="@dimen/text_size_24" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>